<resources>
    <string name="app_name">国际化</string>
    <string name="title_firebase">Firebase</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_google">Google</string>
    <string name="title_memory">Memory</string>

    <!--activity label-->
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_maps">地图</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">244680416463334</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb244680416463334</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">4ylZJ81pg3qovumZHIA2vXdGD</string>
    <string name="twitter_consumer_secret" translatable="false">6Z8isiRzOkj9jalCktntpHAZnftYFPY22N9PnYHkQRKk2oct1B</string>

    <!--Menu-->
    <string name="action_title_settings">设置</string>

    <!--Firebase-->
    <string name="tab_analytics">分析</string>
    <string name="tab_develop">开发</string>
    <string name="tab_grow">发展</string>
    <string name="tab_quality">质量</string>

    <!--Develop-->
    <string name="authentication">身份验证</string>
    <string name="database">数据库</string>
    <string name="storage">存储</string>
    <string name="hosting">主机</string>
    <string name="functions">功能</string>
    <string name="ml_kit">ML Kit</string>

    <!--Analytics-->
    <string name="dashboard">仪表板</string>
    <string name="events">事件</string>
    <string name="conversions">转换</string>
    <string name="audiences">观众</string>
    <string name="funnels">漏斗</string>
    <string name="user_properties">用户属性</string>
    <string name="latest_release">最新发布</string>
    <string name="retention">保留</string>
    <string name="stream_view">流视图</string>
    <string name="debug_view">调试视图</string>

    <!--Grow-->
    <string name="admob">AdMob</string>
    <string name="dynamic_links">动态链接</string>
    <string name="remote_config">远程配置</string>
    <string name="in_app_messaging">In-App Messaging</string>
    <string name="cloud_messaging">云消息传递</string>
    <string name="a_b_testing">A/B Testing</string>
    <string name="predictions">预测</string>

    <!--Quality-->
    <string name="crashlytics">奔溃分析</string>
    <string name="performance">性能</string>
    <string name="test_lab">测试 实验室</string>

    <!--Google-->
    <string name="tab_maps">地图</string>
    <string name="tab_routes">路线</string>
    <string name="tab_places">地点</string>
    <string name="tab_font">字体</string>

    <string name="maps">地图</string>
    <string name="routes">路线</string>
    <string name="places">地点</string>
    <string name="font">字体</string>

    <!--Places-->
    <string name="place_details">详细信息</string>
    <string name="current_place">当前地点</string>
    <string name="find_place">查找地点</string>
    <string name="autocomplete">自动填充</string>
    <string name="geocoding">地理编码</string>
    <string name="geolocation">地理定位</string>
    <string name="time_zone">时区</string>

    <!--Geolocation-->
    <string name="tab_gps">GPS 定位</string>
    <string name="tab_network">网络定位</string>
    <string name="tab_location">综合定位</string>


    <!--Twitter-->
    <string name="advertise">Advertise</string>
    <string name="publish_and_curate">Publish and curate</string>
    <string name="analyze">Analyze</string>
    <string name="engage">Engage</string>

    <!--Facebook-->
    <string name="account_kit">Account Kit</string>
    <string name="messenger">Messenger</string>
    <string name="marketing_api">Marketing API</string>
    <string name="instagram">Instagram</string>
    <string name="facebook_login">Facebook Login</string>

    <!--General settings -->
    <string name="pref_header_general">通用</string>
    <string name="pref_title_settings_language">语言</string>
    <string-array name="pref_language_list_titles">
        <item>Auto</item>
        <item>Chinese</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--Notifications settings -->
    <string name="pref_header_notifications">通知</string>
    <string name="pref_title_message_notifications">消息通知</string>
    <string name="pref_title_notifications">通知重要性</string>
    <string name="pref_title_vibrate">振动</string>
    <string-array name="pref_notifications_list_style">
        <item>Urgent</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_notifications_list_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--Other settings -->
    <string name="pref_header_other">其他</string>
    <string name="pref_title_settings_clean">清除</string>
    <string name="pref_title_settings_update">更新</string>
    <string name="pref_description_clean">清除应用缓存</string>
    <string name="pref_description_update">检查应用更新</string>

</resources>
