<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".firebase.AnalyticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_conversions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conversions"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_audiences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audiences"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_funnels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funnels"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_user_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_properties"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_latest_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_release"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_retention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retention"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_stream_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stream_view"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_debug_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_view"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>