<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".firebase.GrowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_predictions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predictions"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_testing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_b_testing"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_cloud_messaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cloud_messaging"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_in_app_messaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_app_messaging"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_remote_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remote_config"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_dynamic_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_links"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_admob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admob"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>