<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.DevelopFragment">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_database"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storage"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_hosting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hosting"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_functions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/functions"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_ml_kit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ml_kit"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>