<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Jerry xu Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_firebase"
        android:icon="@drawable/ic_nav_firebase"
        android:title="@string/title_firebase" />

    <item
        android:id="@+id/navigation_facebook"
        android:icon="@drawable/ic_nav_facebook"
        android:title="@string/title_facebook" />

    <item
        android:id="@+id/navigation_twitter"
        android:icon="@drawable/ic_nav_twitter"
        android:title="@string/title_twitter" />
    <item
        android:id="@+id/navigation_google"
        android:icon="@drawable/ic_nav_google"
        android:title="@string/title_google" />

</menu>
