<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Jerry xu Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".google.PlacesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_place_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/place_details"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_current_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_place"
            android:enabled="false"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_find_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_place"
            android:enabled="false"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autocomplete"
            android:enabled="false"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_geocoding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geocoding"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_geolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geolocation"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_time_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/time_zone"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>