<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/pref_header_general">
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_language_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/title_google"
            android:title="@string/pref_title_settings_language" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="notifications_category"
        android:title="Notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_ringtone"
            android:title="@string/pref_title_message_notifications" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_ringtone"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/title_google"
            android:title="@string/pref_title_ringtone" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_ringtone"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="other_category"
        android:title="Other">
        <Preference
            android:key="pref_key_update"
            android:summary="@string/pref_description_social_recommendations"
            android:title="Clean" />
        <Preference
            android:key="pref_key_update"
            android:summary="@string/pref_description_social_recommendations"
            android:title="Update" />
    </PreferenceCategory>

</PreferenceScreen>