<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwitterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_advertise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advertise"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_and_curate"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analyze"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_engage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engage"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>