<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".firebase.QualityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_crashlytics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crashlytics"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_performance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/performance"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_test_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_lab"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>